Fixing overflow.

--- a/styles/shared/_rank-nav.scss
+++ b/styles/shared/_rank-nav.scss
@@ -32,6 +32,11 @@
     text-align: center;
     left: 50%;
     transform: translate(-50%, 0);
+
+    @include media-breakpoint-down("sm") {
+      width: 10em;
+      white-space: nowrap;
+    }
   }
 
   &.far-left-side {
@@ -114,6 +119,20 @@
 
     i {
       margin-top: -0.085em;
+    }
+
+    @include media-breakpoint-down("sm") {
+      span {
+        position: absolute;
+        width: 1px;
+        height: 1px;
+        padding: 0;
+        overflow: hidden;
+        clip: rect(0, 0, 0, 0);
+        white-space: nowrap;
+        clip-path: inset(50%);
+        border: 0;
+      }
     }
 
     &:hover {
